--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
 
                 <h1>VARUN KUMAR</h1>
-                <h2>I'm a passionate <span>Senior Software Engineer</span> </h2>
+                <h2>Passionate & Skillful <span>Senior Software Engineer</span> </h2>
 
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
