--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
         <!-- css file -->
-        <link href="assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/style.css?v=3247328327" rel="stylesheet">
 
     </head>
 
