--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
+
+                <div class="social-links">
+                    <a href="https://join.skype.com/invite/U0KJSjI1rl5r" target="_blank" class="skype"><i class="icofont-skype"></i></a>
+                    <a href="https://www.linkedin.com/in/varun-kumar-79478079/" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+                </div>
             </div>
         </header>
 
@@ -75,7 +80,7 @@
                             </div>
                         </div>
                         
-                        <p>Experienced Senior Software Engineer with a demonstrated history of working in the computer software industry. Skilled in PHP(Laravel & CI), JavaScript(ReactJs & VueJs), Server Knowledge(AWS & Google Cloud), Cascading Style Sheets (CSS), HTML & CMS(WordPress). Having Experience in leading a team consisting of 6 members. Strong engineering professional with a Bachelor of Technology (B.Tech.) focused in Computer Science from Krishna Engineering College.
+                        <p>Experienced Senior Software Engineer with a demonstrated history of working in the computer software industry. Skilled in PHP(Laravel & CI), JavaScript(ReactJs & VueJs), Server Knowledge(AWS & Google Cloud), CMS(WordPress), HTML & Cascading Style Sheets (CSS). Having Experience in Leading a Team. Strong engineering professional with a Bachelor of Technology (B.Tech.) focused in Computer Science from Krishna Engineering College.
                     </div>
                 </div>
             </div>
@@ -83,6 +88,14 @@
             <!-- ======= Counts ======= -->
             <div class="professional container">
                 <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="count-box">
+                          <i class="icofont-simple-smile"></i>
+                          <span data-toggle="counter-up">7</span>
+                          <p>Happy Clients</p>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                         <div class="count-box">
                             <i class="icofont-institution"></i>
@@ -94,7 +107,7 @@
                     <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                         <div class="count-box">
                             <i class="icofont-code"></i>
-                            <span data-toggle="counter-up">12</span>
+                            <span data-toggle="counter-up">15</span>
                             <p>Projects</p>
                         </div>
                     </div>
@@ -110,9 +123,9 @@
                 <div class="row skills-content">
                     <div class="col-lg-6">
                         <div class="progress">
-                            <span class="skill">Laravel <i class="val">80%</i></span>
+                            <span class="skill">Laravel <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -124,9 +137,23 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">ReactJs <i class="val">50%</i></span>
+                            <span class="skill">ReactJs <i class="val">30%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">VueJs <i class="val">20%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">WordPress <i class="val">15%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -140,16 +167,30 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">AWS<i class="val">60%</i></span>
+                            <span class="skill">AWS<i class="val">50%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">WordPress <i class="val">15%</i></span>
+                            <span class="skill">Google Cloud<i class="val">20%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">Linux(Ubuntu)<i class="val">70%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
+                            <span class="skill">Windows<i class="val">70%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -291,9 +332,9 @@
             </div>
         </section>
 
-        <div class="credits">
+        <!-- <div class="credits">
             Designed by <a href="#">Varun Kumar</a>
-        </div>
+        </div> -->
 
         <!-- Vendor JS Files -->
         <script src="assets/vendor/jquery/jquery.min.js"></script>
